# libinput

./: README.md  libinput.pc.in  meson.build
src/: evdev-mt-touchpad.c  evdev-mt-touchpad.h  evdev.c  evdev.h  filter-private.h  filter.c  filter.h  libinput-config.c  libinput-mock-all.c  libinput-private.h  libinput.c  libinput.h  libinput.h.backup  path-seat.c  path-seat.h  termux-input-bridge.c  termux-input-bridge.h  timer.c  timer.h  udev-seat.c  udev-seat.h
